Remove large VS Code database files and update .gitignore
- Removed .vscode/browse.vc.db* files (large binary files)
- Updated .gitignore to properly exclude build artifacts and IDE files
- Keep only essential .vscode configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,12 @@ build/
 install/
 log/
 
-# Python
+# IDE - VS Code
+.vscode/
+!.vscode/c_cpp_properties.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/settings.json
 __pycache__/
 *.py[cod]
 *$py.class
@@ -39,10 +44,14 @@ coverage.xml
 *.pyc
 *.pyo
 
-# IDE
-.vscode/settings.json
-.vscode/launch.json
-.vscode/tasks.json
+# IDE - VS Code
+.vscode/
+!.vscode/c_cpp_properties.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/settings.json
+
+# Python
 .idea/
 *.swp
 *.swo
