Refactor micro-ROS agent and ESP32 car integration
- Removed unused files: graph_typesupport.cpp, demangle.cpp, main.cpp, and __init__.py.
- Added a command_to_use.txt file for running the micro-ROS agent and ESP32 car.
- Created a make script for building the project and sourcing the environment.
- Implemented a new launch file (launch_car.py) to start the micro-ROS agent, wheel speed controller, and rosbridge server.
- Developed joystick_to_wheels.py to convert joystick commands to wheel speeds.
- Created wheel_speed_publisher.py to control wheel speeds based on cmd_vel messages.
- Added camera_node.cpp to stream video and control flash light intensity via HTTP requests.
- Implemented wheel_speed_controller.cpp to manage wheel speeds based on received commands.
- Added start.sh script to automate launching the ROS2 environment and fetching ngrok URL.

--- a/src/esp32_car/CMakeLists.txt
+++ b/src/esp32_car/CMakeLists.txt
@@ -6,35 +6,64 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 # find dependencies
+find_package(ament_cmake REQUIRED)
+# Python integration
+find_package(ament_cmake_python REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
-# Installs the C++ and python dependency
-find_package(ament_cmake REQUIRED)
-find_package(ament_cmake_python REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(image_transport REQUIRED)
+find_package(OpenCV REQUIRED)
+find_package(geometry_msgs REQUIRED)
+
+
 
 add_executable(hello src/hello.cpp)
+add_executable(camera_node src/camera_node.cpp)
+add_executable(wheel_speed_controller src/wheel_speed_controller.cpp)
+
 target_include_directories(hello PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include/${PROJECT_NAME}>)
 target_compile_features(hello PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
 
-# Install C++ scripts.
-install(TARGETS hello
-  DESTINATION lib/${PROJECT_NAME})
-  
-# Install launch files.
-install(DIRECTORY
-  launch
-  DESTINATION share/${PROJECT_NAME}/)
+target_include_directories(camera_node PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include/${PROJECT_NAME}>
+  ${OpenCV_INCLUDE_DIRS}
+)
 
-# Install Python modules
+target_include_directories(wheel_speed_controller PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include/${PROJECT_NAME}>
+)
+
+target_compile_features(wheel_speed_controller PUBLIC c_std_99 cxx_std_17)
+ament_target_dependencies(wheel_speed_controller rclcpp geometry_msgs)
+
+target_compile_features(camera_node PUBLIC c_std_99 cxx_std_17)
+target_link_libraries(camera_node ${OpenCV_LIBS} curl)
+ament_target_dependencies(camera_node rclcpp sensor_msgs image_transport)
+
+install(TARGETS 
+  hello
+  wheel_speed_controller
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+# Install Python package and scripts
 ament_python_install_package(${PROJECT_NAME})
-
-# Install Python executables
 install(PROGRAMS
-  scripts/controller.py  
+  scripts/controller.py
+  scripts/joystick_to_wheels.py
+  scripts/wheel_speed_publisher.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
